[gd_scene load_steps=3 format=3 uid="uid://b40oyihi6jsn7"]

[ext_resource type="Script" uid="uid://c4frpetmtf0dw" path="res://Scripts/settings_menu.gd" id="1_drmk1"]

[sub_resource type="LabelSettings" id="LabelSettings_drmk1"]
font_size = 32

[node name="Settings Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_drmk1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14509805, 0.14509805, 0.14509805, 1)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -239.0
offset_right = 244.0
offset_bottom = 239.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -73.5
offset_top = 33.425003
offset_right = 73.5
offset_bottom = 78.42502
grow_horizontal = 2
text = "SETTINGS"
label_settings = SubResource("LabelSettings_drmk1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -196.0
offset_top = 120.0
offset_right = 196.0
offset_bottom = 409.0
grow_horizontal = 2
theme_override_constants/separation = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "General Volume"

[node name="GeneralVolume" type="HSlider" parent="Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Panel/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolume" type="HSlider" parent="Panel/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="Panel/VBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Effect Volume"

[node name="EffectVolume" type="HSlider" parent="Panel/VBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="Resolution" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resolution"

[node name="OptionButton" type="OptionButton" parent="Panel/VBoxContainer"]
layout_mode = 2
selected = 2
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="CheckBox" type="CheckBox" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Full Screen"

[node name="Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -46.0
offset_top = -51.53003
offset_right = 46.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "BACK"

[connection signal="value_changed" from="Panel/VBoxContainer/VBoxContainer/GeneralVolume" to="." method="_on_general_volume_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/VBoxContainer2/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/VBoxContainer3/EffectVolume" to="." method="_on_effect_volume_value_changed"]
[connection signal="item_selected" from="Panel/VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="Panel/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
